--- a/android_app/Watr/app/src/main/res/values/strings.xml
+++ b/android_app/Watr/app/src/main/res/values/strings.xml
@@ -60,4 +60,11 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_quality">Choose a Quality</string>
+    <string name="choose_quality_complete">Ok!</string>
+    <string name="choose_quality_cancel">Cancel</string>
+    <string name="quality_fragment_tag">Select Quality</string>
 </resources>
