Got all the basic fragments working
data also now submitted in different json structure
TODO:
 - change text of fields after they're selected
 - add increment/label to slider
 - change color of submit back on success

--- a/android_app/Watr/app/src/main/res/values/strings.xml
+++ b/android_app/Watr/app/src/main/res/values/strings.xml
@@ -67,4 +67,8 @@
     <string name="choose_quality_complete">Ok!</string>
     <string name="choose_quality_cancel">Cancel</string>
     <string name="quality_fragment_tag">Select Quality</string>
+    <string name="ok">OK</string>
+    <string name="zipcode">Zipcode</string>
+    <string name="ph">pH</string>
+    <string name="lead">Lead</string>
 </resources>
